@startuml ComputerAbstractFactory

skinparam Monochrome reverse

title Abstract Factory pattern for creating parts for computers

class Component
{
  {abstract} getBrand()
  {abstract} getModel()
  {abstract} getPlatform()
}

class ComputerFactory
{
  + ComputerFactory()
  + makeAndroid()
  + makeLaptop()
}

class CPUFactory
{
  + CPUFactory()
  + makeAndroidCPU()
  + makeLaptopCPU()
}

' Android
class Android
{
  - Android()
  + getBrand()
  + getModel()
  + getPlatform()
  + getCPU()
}

' Laptop
class Laptop
{
  - Laptop()
  + getBrand()
  + getModel()
  + getPlatform()
  + getCPU()
}

' CPU
class CPU
{
  {abstract} getGeneration()
  {abstract} getNumberOfCores()
  {abstract} getMaxClockSpeedGHz()
}

class AndroidCPU
{
  - AndroidCPU()
  + operator==()
  + getBrand()
  + getModel()
  + getPlatform()
  + getGeneration()
  + getNumberOfCores()
  + getMaxClockSpeedGHz()
}

class LaptopCPU
{
  - LaptopCPU()
  + operator==()
  + getBrand()
  + getModel()
  + getPlatform()
  + getGeneration()
  + getNumberOfCores()
  + getMaxClockSpeedGHz()
}

Component <|-- Android
Component <|-- Laptop
Component <|-- CPU
CPU <|-- AndroidCPU
CPU <|-- LaptopCPU

Android o-- AndroidCPU
Laptop o-- LaptopCPU

ComputerFactory o-- Android
ComputerFactory o-- Laptop
ComputerFactory o-- CPUFactory
CPUFactory o-- CPU

Client -> ComputerFactory

@enduml

